<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1"

    >
    <TableRow>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount_prompt"
            android:gravity="start"
            android:layout_marginStart="5dp"
            android:textSize="10sp"
            />

        <EditText
            android:id="@+id/loan_amount"
            android:layout_height="wrap_content"
            android:hint="@string/enter_desired_loan_amount"
            android:inputType="numberDecimal"
            android:textSize="15sp">

            <requestFocus></requestFocus>
        </EditText>
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/interest_rate_prompt"
            android:layout_marginStart="5dp"
            android:textSize="10sp"/>

        <EditText
            android:id="@+id/interest_rate"
            android:layout_height="wrap_content"
            android:hint="@string/enter_rate_percentage"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/loan_period_prompt"
            android:layout_marginStart="5dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/loan_period"
            android:layout_height="wrap_content"
            android:hint="@string/enter_desired_loan_period"
            android:inputType="number"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow>
        <Button android:text="@string/loan_button_text"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showLoanPayments"
            />
    </TableRow>
    <TableRow android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment_prompt"
            android:gravity="start"
            android:layout_marginStart="10dp"/>
        <TextView android:id="@+id/monthly_payment_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:gravity="end"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_payments_prompt"
            android:gravity="start"
            android:layout_marginStart="10dp"/>
        <TextView android:id="@+id/total_payments_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:gravity="end"/>
    </TableRow>
</TableLayout>