<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    android:background="@drawable/blurwallpaper">
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/loan_amount_prompt"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/loan_amount"
            android:layout_height="wrap_content"
            android:hint="Enter Desired Loan Amount"
            android:inputType="numberDecimal">

            <requestFocus></requestFocus>
        </EditText>
    </TableRow>

    <TableRow android:layout_height="29dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/interest_rate_prompt"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/interest_rate"
            android:layout_height="wrap_content"
            android:hint="Enter Rate Percentage"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow android:layout_height="80dp">



            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="wrap_content"
            android:indeterminate="false"
            android:max="30"
            android:progress="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Loan_Period_Prompt3"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/loan_period"
            android:layout_height="wrap_content"
            android:hint="Years x 12 = Number of Months"
            android:inputType="number" />
    </TableRow>
    <TableRow>
        <Button android:text="@string/loan_button_text"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:onClick="showLoanPayments"/>
    </TableRow>
    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/monthly_payment_prompt"
            android:textStyle="bold" />
        <TextView android:id="@+id/monthly_payment_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:gravity="left"/>
    </TableRow>

    <TableRow android:layout_height="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/total_payments_prompt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_payments_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="#ff0000" />
    </TableRow>
</TableLayout>